k8s-gitops-config/manifests/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: fullstack-app
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
  clusterIP: None
